--- a/src/app/success.component.html
+++ b/src/app/success.component.html
@@ -13,7 +13,7 @@
   <h2>
     Excellent! It looks like your business could qualify for generous HMRC tax reliefs
   </h2>
-  <button class="btn btn-primary" [routerLink]="['../testPDF']">
+  <button class="btn btn-primary" [routerLink]="['../claimForm']">
     Click to proceed with claim
   </button>
 </div>
