Attempting to add firebase DB

--- a/src/app/claimForm.component.html
+++ b/src/app/claimForm.component.html
@@ -374,7 +374,7 @@
         </div>
       </form>
 
-      <p (click)="submitForm()" style="cursor: pointer">
+      <p (click)="saveFormToDB()" style="cursor: pointer">
         test log
       </p>
     </div>
