--- a/src/app/test.component.html
+++ b/src/app/test.component.html
@@ -1,15 +1,5 @@
-<ul style="margin-top: 100px">
-  <li class="text" *ngFor="let item of items | async">
-    {{item.name}}
-  </li>
-</ul>
-
-<p>
-  {{form | async | json}}
-</p>
-<br>
-<h1 >
-  {{form}}
+<h1 style="margin-top: 100px">
+  {{test.name}}
 </h1>
 
 <button class="btn btn-primary" (click)="pleaseJustRead()">log</button>
