--- a/src/app/welcome.component.html
+++ b/src/app/welcome.component.html
@@ -10,12 +10,12 @@
 <!--</html>-->
 
 <div class="container" style="margin-top: 100px;">
-  <div class="col-sm-12 text-left">
+  <div class="col-sm-12 text-left" *ngIf="authService.userData as user">
     <h2>
       Welcome page - Title
     </h2>
     <p>
-      Text could the traffic light test
+      Text could the traffic light test || {{user.uid}}
     </p>
     <button class="btn btn-primary"
             [routerLink]="['/tltv1']">
