--- a/src/app/nav.component.html
+++ b/src/app/nav.component.html
@@ -1,14 +1,3 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--  <meta charset="UTF-8">-->
-<!--  <title>Title</title>-->
-<!--</head>-->
-<!--<body>-->
-
-<!--</body>-->
-<!--</html>-->
-
 <div class="navbar navbar-expand-sm bg-primary navbar-dark fixed-top">
   <span class="navbar-brand">
     Maximum R&D
@@ -17,11 +6,11 @@
           [routerLink]="['']">
     Home
   </button>
-  <button class="btn btn-primary"
+  <button class="btn btn-primary" *ngIf="!authService.isLoggedIn"
           [routerLink]="['/sign-in']">
     Sign-in
   </button>
-  <button class="btn btn-primary"
+  <button class="btn btn-primary" *ngIf="authService.isLoggedIn"
           (click)="authService.signOut()">
     Sign-out
   </button>
